# FurLang_app

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yaml
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  download_server.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  server_runner.rs
src/components/: charts.ts  dashboard.vue  lib.ts  loadingPage.vue  mainPage.vue  query.vue  splashscreen.vue
