[package]
name = "furlang-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "furlang_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0.1"
tokio = {"version" = "1.39.2", features = ["full"] }
once_cell = "1.19.0"
lazy_static = "1.5.0"
anyhow = "1.0.86"
tauri-plugin-http = "2.0.0-rc.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal"] }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32", "Win32_System"]}
